--- a/library-grad-project/library-grad-project.csproj
+++ b/library-grad-project/library-grad-project.csproj
@@ -181,19 +181,45 @@
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Context\LibraryContext.cs" />
     <Compile Include="Controllers\BooksController.cs" />
+    <Compile Include="Controllers\ReservationsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609060844435_initial.cs" />
+    <Compile Include="Migrations\201609060844435_initial.Designer.cs">
+      <DependentUpon>201609060844435_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609060847358_initial1.cs" />
+    <Compile Include="Migrations\201609060847358_initial1.Designer.cs">
+      <DependentUpon>201609060847358_initial1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609060858594_initial11.cs" />
+    <Compile Include="Migrations\201609060858594_initial11.Designer.cs">
+      <DependentUpon>201609060858594_initial11.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609060908445_initial2.cs" />
+    <Compile Include="Migrations\201609060908445_initial2.Designer.cs">
+      <DependentUpon>201609060908445_initial2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Book.cs" />
+    <Compile Include="Models\Reservation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\BookRepository.cs" />
     <Compile Include="Repos\IRepository.cs" />
+    <Compile Include="Repos\FilledBookRepository.cs" />
+    <Compile Include="Repos\ReservationRepository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Index.html" />
+    <Content Include="Content\scripts\controller.js" />
     <Content Include="Global.asax" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -203,14 +229,30 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201609060844435_initial.resx">
+      <DependentUpon>201609060844435_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609060847358_initial1.resx">
+      <DependentUpon>201609060847358_initial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609060858594_initial11.resx">
+      <DependentUpon>201609060858594_initial11.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609060908445_initial2.resx">
+      <DependentUpon>201609060908445_initial2.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
@@ -232,6 +274,9 @@
           <CustomServerUrl>
           </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
+          <servers defaultServer="SelfHostServer">
+            <server name="SelfHostServer" exePath="" cmdArgs="" url="http://localhost:51918/" workingDir="" />
+          </servers>
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
