--- a/library-grad-project/library-grad-project.csproj
+++ b/library-grad-project/library-grad-project.csproj
@@ -183,7 +183,10 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Context\LibraryContext.cs" />
     <Compile Include="Controllers\BooksController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\RatingsController.cs" />
     <Compile Include="Controllers\ReservationsController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -203,19 +206,57 @@
     <Compile Include="Migrations\201609060908445_initial2.Designer.cs">
       <DependentUpon>201609060908445_initial2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609081000224_initial3.cs" />
+    <Compile Include="Migrations\201609081000224_initial3.Designer.cs">
+      <DependentUpon>201609081000224_initial3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609081453078_initial4.cs" />
+    <Compile Include="Migrations\201609081453078_initial4.Designer.cs">
+      <DependentUpon>201609081453078_initial4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609091029075_initial5.cs" />
+    <Compile Include="Migrations\201609091029075_initial5.Designer.cs">
+      <DependentUpon>201609091029075_initial5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609091305183_initial6.cs" />
+    <Compile Include="Migrations\201609091305183_initial6.Designer.cs">
+      <DependentUpon>201609091305183_initial6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609121252027_initial7.cs" />
+    <Compile Include="Migrations\201609121252027_initial7.Designer.cs">
+      <DependentUpon>201609121252027_initial7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609121253593_initial8.cs" />
+    <Compile Include="Migrations\201609121253593_initial8.Designer.cs">
+      <DependentUpon>201609121253593_initial8.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609121317024_initial9.cs" />
+    <Compile Include="Migrations\201609121317024_initial9.Designer.cs">
+      <DependentUpon>201609121317024_initial9.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609121448266_initial10.cs" />
+    <Compile Include="Migrations\201609121448266_initial10.Designer.cs">
+      <DependentUpon>201609121448266_initial10.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Book.cs" />
+    <Compile Include="Models\BookRating.cs" />
     <Compile Include="Models\Reservation.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\BookRepository.cs" />
     <Compile Include="Repos\IRepository.cs" />
     <Compile Include="Repos\FilledBookRepository.cs" />
+    <Compile Include="Repos\RatingRepository.cs" />
     <Compile Include="Repos\ReservationRepository.cs" />
+    <Compile Include="Repos\UserRepository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Index.html" />
     <Content Include="Content\scripts\controller.js" />
+    <Content Include="Content\scripts\mainJquery.js" />
+    <Content Include="Content\style\main.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -245,6 +286,30 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609060908445_initial2.resx">
       <DependentUpon>201609060908445_initial2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609081000224_initial3.resx">
+      <DependentUpon>201609081000224_initial3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609081453078_initial4.resx">
+      <DependentUpon>201609081453078_initial4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609091029075_initial5.resx">
+      <DependentUpon>201609091029075_initial5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609091305183_initial6.resx">
+      <DependentUpon>201609091305183_initial6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609121252027_initial7.resx">
+      <DependentUpon>201609121252027_initial7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609121253593_initial8.resx">
+      <DependentUpon>201609121253593_initial8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609121317024_initial9.resx">
+      <DependentUpon>201609121317024_initial9.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609121448266_initial10.resx">
+      <DependentUpon>201609121448266_initial10.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
